--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'poppins',sans-serif;
+    color:white;
 }
 
 #header{
@@ -18,13 +19,15 @@
     width:auto;
     background-color: black;
     background-image: url(images/background.gif);
-    background-position: center;
     background-color:black;
     background-repeat: no-repeat;
     background-size: 70%;
-    color:whitel
-    padding 0 8%
+    color:black;
+    padding:10px;
+    background-position:center;
+    background-attachment: fixed;
 }
+
 nav{
     display: flex;
     align-items: center;
@@ -45,7 +48,7 @@ nav ul li a{
     font-weight:bolder;
     text-decoration:none;
 }
-.neonText {
+.neonTextBlue {
     color: #fff;
     text-shadow:
         0 0 7px #fff,
@@ -57,3 +60,88 @@ nav ul li a{
         0 0 102px #5271ff,
         0 0 151px #5271ff;
   }
+  .neonTextPink {
+    color: #fff;
+    text-shadow:
+    0 0 4px #fff,
+    0 0 10px #fff,
+    0 0 18px #fff,
+    0 0 38px #f09,
+    0 0 73px #f09,
+    0 0 80px #f09,
+    0 0 94px #f09,
+    0 0 140px #f09;
+    line-height: 1;
+    font-family: "Vibur", sans-serif;
+    animation: pulsate 0.11s ease-in-out infinite alternate;  
+    font-size: 50px;
+    margin-top: 12%;
+    margin-left: 5%;
+
+  }
+  button{
+      background-color: black;
+      border: 0;
+      outline: none;
+      padding: 15px 35px;
+      color:white;
+      margin-top: 5%;
+      font-weight: 500;
+      letter-spacing: 1px;
+      cursor: pointer;
+      text-decoration:none;
+      
+
+  }
+  .indicator span{
+      display:inline-block;
+      background: #3a3a3a;
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      margin-left: 20px;
+  }
+  .indicator{
+      margin-top: 150px;
+  }
+
+  .indicator span.active{
+      background: #bfbfbf;
+  }
+  .cta{
+      position:absolute;
+      width:25%;
+      min-width: 250px;
+      right: 8%;
+      bottom:100px;
+      font-size:small;
+  }
+
+.neon{
+    color: #fff;
+    border: 4px solid #fff;
+    padding: 30px 70px;
+    width: fit-content;
+    margin: 200px auto;
+    font-size: 50px;
+    font-weight: 400;
+    font-style: italic;
+    transition: text-shadow 0.5s, box-shadow 0.5s;
+}
+
+.neon:hover{
+    text-shadow: -2px -2px 10px #fff,
+                2px 2px 10px #fff,
+                0 0 20px #f10,
+                0 0 40px #f10,
+                0 0 60px #f10,
+                0 0 80px #f10,
+                0 0 100px #f10;
+
+    box-shadow: 0 0 5px #fff,
+                inset 0 0 5px #fff,
+                0 0 20px #08f,
+                inset 0 0 20px #08f,
+                0 0 40px #08f,
+                inset 0 0 40px #08f;
+}
