--- a/style.css
+++ b/style.css
@@ -78,7 +78,31 @@ nav ul li a{
     margin-top: 12%;
     margin-left: 5%;
 
+
   }
+  .dropdown {
+    display: inline-block;
+    position: relative;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #5271ff;
+
+  }
+
   button{
       background-color: black;
       border: 0;
@@ -89,8 +113,7 @@ nav ul li a{
       font-weight: 500;
       letter-spacing: 1px;
       cursor: pointer;
-      text-decoration:none;
-      
+      text-decoration:none;    
 
   }
   .indicator span{
@@ -117,31 +140,10 @@ nav ul li a{
       font-size:small;
   }
 
-.neon{
-    color: #fff;
-    border: 4px solid #fff;
-    padding: 30px 70px;
-    width: fit-content;
-    margin: 200px auto;
-    font-size: 50px;
-    font-weight: 400;
-    font-style: italic;
-    transition: text-shadow 0.5s, box-shadow 0.5s;
-}
 
-.neon:hover{
-    text-shadow: -2px -2px 10px #fff,
-                2px 2px 10px #fff,
-                0 0 20px #f10,
-                0 0 40px #f10,
-                0 0 60px #f10,
-                0 0 80px #f10,
-                0 0 100px #f10;
+.container{
+    min-height: 100vh;
+    width:auto;
+    background-color: black;
 
-    box-shadow: 0 0 5px #fff,
-                inset 0 0 5px #fff,
-                0 0 20px #08f,
-                inset 0 0 20px #08f,
-                0 0 40px #08f,
-                inset 0 0 40px #08f;
 }
